<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dip"
        android:stretchColumns="*" >

        <TableRow>

            <TextView
                android:id="@+id/sen1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sensor1"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sen2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sensor2"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/sen3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sensor3"
                android:textColor="@color/dark_grey"
                android:textSize="14sp" />
            
             <TextView
                 android:id="@+id/sen4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/sensor4"
                 android:textColor="@color/dark_grey"
                 android:textSize="14sp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/s1x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/s2x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/s3x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
            
            <TextView
                android:id="@+id/s4x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
        </TableRow>
          <TableRow>

            <TextView
                android:id="@+id/s1y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/s2y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/s3y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
            
            <TextView
                android:id="@+id/s4y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
            
        </TableRow>
          <TableRow>

            <TextView
                android:id="@+id/s1z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/s2z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />

            <TextView
                android:id="@+id/s3z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
            
            <TextView
                android:id="@+id/s4z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/dark_grey" />
            
        </TableRow>
    </TableLayout>


	<TextView
	    android:id="@+id/other"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dip"
        android:text="@string/jsonRep"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>